# letterboxd-trakt-sync

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mise.toml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yml
docker/: crontab  entrypoint.sh  run.sh
letterboxd_trakt/: __init__.py  config.py  main.py  sync.py  trakt.py
