[project]
name = "letterboxd-trakt"
version = "0.1.0"
description = "Script to sync your Letterboxd ratings to your Trakt account."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "humanize>=4.11.0",
    "letterboxdpy",
    "lxml>=5.3.0",
    "pydantic>=2.10.4",
    "pytrakt",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
]

[project.scripts]
letterboxd-trakt = 'letterboxd_trakt.main:run'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"] # enable import sorting

[tool.mypy]
check_untyped_defs = true

[tool.hatch.metadata]
allow-direct-references = true # allow git dependencies todo: why do i need to do this

[tool.uv]
dev-dependencies = ["mypy>=1.14.0", "pre-commit>=4.0.1", "ruff>=0.8.4"]

[tool.uv.sources]
pytrakt = { git = "https://github.com/f0e/python-pytrakt", branch = "get-history" }
letterboxdpy = { git = "https://github.com/f0e/letterboxdpy", branch = "fix" }
